# apeiron-framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  run.bat  run_debug.bat
.github/workflows/: ci.yml
docs/: architecture.md
src/: CMakeLists.txt
src/agent/core/include/apeiron/cognition/: thought_generator.h
src/agent/core/include/apeiron/memory/: episodic_store.h
src/agent/core/src/cognition/: thought_generator.cpp
src/agent/core/src/consciousness/: awareness_engine.cpp
src/agent/core/src/memory/: episodic_store.cpp
src/autonomy/: CMakeLists.txt
src/autonomy/include/apeiron/autonomy/: autonomy_export.h  goal_evaluator.h  goal_manager.h  intrinsic_motivation_engine.h  types.h
src/autonomy/src/: goal_evaluator.cpp  goal_manager.cpp  intrinsic_motivation_engine.cpp
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/connect/: CMakeLists.txt
src/connect/include/apeiron/connect/: connect_export.h  llm_adapter.h  mock_llm_adapter.h  tool_executor.h
src/connect/src/: llm_adapter.cpp  mock_llm_adapter.cpp  tool_executor.cpp
src/core/: CMakeLists.txt
src/core/include/apeiron/: core_export.h
src/core/include/apeiron/bridge/: agent_state.hpp  state_queue.hpp
src/core/include/apeiron/cognition/: thought_generator.h
src/core/include/apeiron/consciousness/: awareness_engine.h  reflection_module.h
src/core/include/apeiron/emotion/: affective_state.h
src/core/include/apeiron/memory/: episodic_store.h
src/core/src/cognition/: thought_generator.cpp
src/core/src/consciousness/: awareness_engine.cpp  reflection_module.cpp
src/core/src/emotion/: affective_state.cpp
src/core/src/memory/: episodic_store.cpp
src/discovery/: CMakeLists.txt
src/discovery/include/apeiron/discovery/: data_analyzer.h  discovery_export.h  experiment_designer.h  hypothesis_generator.h  theory_builder.h  types.h
src/discovery/src/: data_analyzer.cpp  experiment_designer.cpp  hypothesis_generator.cpp  theory_builder.cpp
src/distributed/: CMakeLists.txt
src/distributed/include/apeiron/distributed/: cluster_manager.h  data_synchronizer.h  distributed_export.h  message_broker.h  task_scheduler.h
src/distributed/src/: cluster_manager.cpp  data_synchronizer.cpp  message_broker.cpp  task_scheduler.cpp
src/evolution/: CMakeLists.txt
src/evolution/include/apeiron/evolution/: architecture_designer.h  evolution_export.h  meta_optimizer.h  performance_profiler.h  types.h
src/evolution/src/: architecture_designer.cpp  meta_optimizer.cpp  performance_profiler.cpp
src/gui/: CMakeLists.txt
src/gui/include/apeiron/gui/: control_panels.h  debug_console.h  gui_export.h  gui_manager.h  visualization_panels.h
src/gui/src/: control_panels.cpp  debug_console.cpp  gui_manager.cpp  main.cpp  visualization_panels.cpp
src/hyper/: CMakeLists.txt
src/hyper/include/apeiron/hyper/: hyper_export.h  hyper_loop.hpp  snapshot_manager.h  snapshot_manager.hpp  time_dilation.h
src/hyper/src/: hyper_loop.cpp  time_dilation.cpp
src/learning/: CMakeLists.txt
src/learning/include/apeiron/learning/: knowledge_graph.h  learning_engine.h  learning_export.h  model_updater.h  reinforcement_learner.h
src/learning/src/: knowledge_graph.cpp  learning_engine.cpp  model_updater.cpp  reinforcement_learner.cpp
src/mutation/: CMakeLists.txt
src/mutation/include/apeiron/mutation/: code_analyzer.h  mutation_engine.h  mutation_export.h  mutation_proposer.h  safety_validator.h  types.h  version_control.h
src/mutation/src/: code_analyzer.cpp  mutation_engine.cpp  mutation_proposer.cpp  safety_validator.cpp  version_control.cpp
src/prediction/: CMakeLists.txt
src/prediction/include/apeiron/prediction/: causal_inference_engine.h  future_simulator.h  prediction_export.h  predictive_model.h  types.h
src/prediction/src/: causal_inference_engine.cpp  future_simulator.cpp  predictive_model.cpp
src/safety/: CMakeLists.txt
src/safety/ethics/: CMakeLists.txt
src/safety/ethics/include/apeiron/safety/ethics/: ethical_monitor.h  ethical_predictor.h  value_alignment_engine.h
src/safety/ethics/src/: ethical_monitor.cpp  ethical_predictor.cpp  value_alignment_engine.cpp
src/safety/include/apeiron/safety/: formal_verifier.h  goal_aligner.h  human_interface.h  safety_export.h  safety_monitor.h
src/safety/src/: formal_verifier.cpp  goal_aligner.cpp  human_interface.cpp  safety_monitor.cpp
src/swarm/: CMakeLists.txt
src/swarm/include/apeiron/swarm/: agent_communicator.h  consensus_mechanism.h  swarm_export.h  task_delegator.h  types.h
src/swarm/src/: agent_communicator.cpp  consensus_mechanism.cpp  task_delegator.cpp
src/viz/: CMakeLists.txt
src/viz/include/apeiron/viz/: console_renderer.h  viz_export.h
src/viz/src/: console_renderer.cpp
src/world/: CMakeLists.txt
src/world/include/apeiron/world/: environment.h  grid_environment.h  world_export.h
src/world/src/: environment.cpp  grid_environment.cpp
tests/: CMakeLists.txt
tests/unit/: test_autonomy.cpp  test_awareness.cpp  test_bridge.cpp  test_connect.cpp  test_discovery.cpp  test_distributed.cpp  test_emotion.cpp  test_ethics.cpp  test_evolution.cpp  test_extension_integration.cpp  test_gui.cpp  test_hyperloop.cpp  test_learning.cpp  test_memory.cpp  test_mutation.cpp  test_prediction.cpp  test_safety.cpp  test_swarm.cpp  test_thoughts.cpp  test_world.cpp
